controller_test.c complete!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(rvc_controller C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(rvc_controller main.c)
+add_executable(rvc_controller_test controller_test.c)
